// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders BackTop/demo/basic.md correctly 1`] = `
<div
  style="position:relative;padding:8px 12px"
>
  <div
    class="arco-backtop"
    style="position:absolute"
  />
  <div
    class="arco-typography"
  >
    The button will appear in the bottom corner of the scrolling area
  </div>
  <div
    id="custom_backtop0"
    style="height:300px;overflow:auto"
  >
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
  </div>
</div>
`;

exports[`renders BackTop/demo/custom_button.md correctly 1`] = `
<div
  style="position:relative;padding:8px 12px"
>
  <div
    class="arco-backtop"
    style="position:absolute"
  />
  <div
    id="custom_backtop"
    style="height:300px;overflow:auto"
  >
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
    <div
      class="arco-typography"
    >
      This is the content
    </div>
  </div>
</div>
`;

exports[`renders BackTop/demo/easing.md correctly 1`] = `
<div>
  <div
    style="margin:12px"
  >
    <span
      class="arco-typography"
      style="margin-right:8px"
    >
      Easing
    </span>
    <div
      class="arco-select arco-select-single arco-select-size-default"
      style="width:200px;margin-right:10px"
      tabindex="0"
    >
      <div
        class="arco-select-view"
        title="linear"
      >
        <input
          class="arco-select-view-input arco-select-hidden"
          style="width:100%;pointer-events:none"
          tabindex="-1"
          value="linear"
        />
        <span
          class="arco-select-view-value"
        >
          linear
        </span>
        <div
          class="arco-select-suffix"
        >
          <div
            class="arco-select-arrow-icon"
          >
            <svg
              class="arco-icon arco-icon-down"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
              width="1em"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <span
      class="arco-typography"
      style="margin:0 8px 0 40px"
    >
      Time
    </span>
    <input
      class="arco-input arco-input-size-default"
      placeholder="Please enter the easing time"
      style="width:200px"
      value="200"
    />
  </div>
  <div
    style="position:relative"
  >
    <div
      class="arco-backtop"
      style="position:absolute;right:60px;bottom:60px"
    />
    <div
      id="custom_backtop2"
      style="height:300px;overflow:auto;padding:8px 12px"
    >
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
      <div
        class="arco-typography"
      >
        This is the content
      </div>
    </div>
  </div>
</div>
`;
